--- a/LECTURE10.html
+++ b/LECTURE10.html
@@ -510,14 +510,15 @@ div.tocify {
 <p>First, go to InsightMaker and clone the demo individual-based model! <a href="https://insightmaker.com/insight/162354/Sheep-model-Individual-based-demo">Here is the link!</a>.</p>
 <ol style="list-style-type: decimal">
 <li><p>Make sure you can run the model and interpret the resulting figures.</p></li>
-<li>Try to adjust the number of sheep and wolves to meet your management goals:
-<ul>
-<li>Maintain viable populations of both sheep and wolves</li>
-<li>Maintain lush grass!</li>
-</ul></li>
 <li><p>Does the model behave realistically? Test it! What happens if you start with lots of sheep and no wolves? What happens if you start with no sheep, and a bunch of wolves?</p></li>
 <li><p>Is it possible for the experimental plot to support sheep, wolves, and grass indefinitely?</p></li>
-<li><p>What if wolves were more efficient at killing sheep? Try doubling the “Prob of kill” variable and see how your answer changes.</p></li>
+<li>Try to adjust the number of sheep and wolves to meet your management goals: [tophat]
+<ul>
+<li>Maintain viable populations of both sheep and wolves<br />
+</li>
+<li>Maintain lush grass!</li>
+</ul></li>
+<li><p>What if wolves were more efficient at killing sheep? Try doubling the “Prob of kill” variable and see if/how your answer changes.</p></li>
 <li><p>What if grass were more productive? Try doubling the “Grass Growth Rate” and see if more sheep can be supported sustainably.</p></li>
 <li><p>What if the wolves don’t actually kill the sheep, but just scare them (make them move continuously)?? Could the presence of wolves affect grass growth in this case? Can you think of a way to test this using this IBM?</p></li>
 </ol>
